Feat: Changed it so version and languages can be given or defaulted to //TODO implement tests for all layers + docs
