# backend/src/application/schemas/learningObjectSchemas.ts
@@ -1,13 +1,13 @@
 import { z } from "zod";
-import { HTMLType } from "../../core/entities/LearningObject";
+import { HTMLType } from "../../core/entities/learningObject";
 
 /**
  * Schemas for user services
  */
 
-export const getObjectSchema = z.object({
+export const getLearningObjectSchema = z.object({
     id: z.string(),
     type: z.nativeEnum(HTMLType),
     language: z.string().optional(),
-    version: z.number().optional()
+    version: z.string().optional()
 });
