# backend/src/infrastructure/repositories/LearningObjectRepository.ts
@@ -1,9 +1,17 @@
-import { LearningObject } from "../../core/entities/LearningObject";
-import { ILearningObjectRepository } from "../../core/repositories/LearningObjectRepositoryInterface";
+import { LearningObject } from "../../core/entities/learningObject";
+import { ILearningObjectRepository } from "../../core/repositories/learningObjectRepositoryInterface";
 import { DatasourceLearningObject } from "../dwengo_backend/data/data_sources/http/datasourceLearningObject";
 
 export class LearningObjectRepository implements ILearningObjectRepository {
     private datasource: DatasourceLearningObject = new DatasourceLearningObject();
+
+    public async getVersions(hruid: string): Promise<string[]> {
+        return this.datasource.getVersions(hruid);
+    }
+
+    public async getLanguages(hruid: string): Promise<string[]> {
+        return this.datasource.getLanguages(hruid);
+    }
 
     public async getwrappedLearningObject(hruid: string, language: string, version: number): Promise<LearningObject> {
         return this.datasource.getWrappedLearningObject(hruid, language, version);
